--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,13 +8,12 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  colorfilter_generator: ^0.0.7
   flutter:
     sdk: flutter
+  image: ^3.1.3
   path: ^1.8.0
   path_provider: ^2.0.9
-  responsive_util: ^0.4.0
-  syncfusion_flutter_sliders: ^19.4.53
-  zoom_widget: ^0.2.1
 
 dev_dependencies:
   flutter_test:
